Fix menu colour issues on mobile view

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -126,16 +126,17 @@ header .intro-text .skills {
   background: #ffffff;
 }
 .navbar-custom .navbar-toggle {
-  color: white;
+  color: lightgray;
   text-transform: uppercase;
   font-size: 5px;
   border-color: white;
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: #18BC9C;
-  color: white;
-  border-color: #18BC9C;
+  /*background-color: #18BC9C;*/
+  background-color: white;
+  color: blue;
+  /*border-color: #18BC9C;*/
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -187,7 +188,7 @@ section.success {
   margin: 0 auto;
 }
 #portfolio .portfolio-item .portfolio-link .caption {
-  /*background: rgba(255, 255, 255, 0.5); uncommenting this will block the hover action on categories! */ 
+  /*background: rgba(255, 255, 255, 0.5); uncommenting this will block the hover action on categories! */
   position: absolute;
   width: 100%;
   height: 100%;
